k8s/base/second-step/06-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels: { app: client }
  template:
    metadata: { labels: { app: client } }
    spec:
      containers:
        - name: client
          image: cloudnotes-client
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 80 }]
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - name: client-nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: client-nginx-conf
          configMap:
            name: client-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector: { app: client }
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
